# handler/response.go
@@ -32,6 +32,11 @@ type ListOpeningResponse struct {
 	Data    []schemas.OpeningResponse `json:"data"`
 }
 
+type UpdateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(code, gin.H{
