# handler/updateOpening.go
@@ -7,6 +7,21 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+
+// UpdateOpeningHandler
+// @Summary Update a new opening
+// @Description Update a job opening
+// @Tags opening
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening ID"
+// @Param opening body UpdateOpeningRequest true "Opening data to Update"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
 
